# ChangeLog for app-text/tkman
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/tkman/ChangeLog,v 1.9 2003/07/17 00:14:40 pylon Exp $

  17 Jul 2003; Lars Weiler <pylon@gentoo.org> tkman-2.1-r1.ebuild:
  Set ppc into KEYWORDS

*tkman-2.1-r1 (23 Apr 2003)

  23 Apr 2003; Stanislav Brabec <utx@gentoo.org> tkman-2.1-r1.ebuild,
  files/tkman-2.1-r1-gentoo.diff:
  Use wish, not wish8.3, to work with both tcl/tk 8.3 and 8.4 (bug #19553).

*tkman-2.1.ebuild (23 Nov 2002)

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  23 Nov 2002; Sascha Schwabbauer <cybersystem@gentoo.org> tkman-2.1.ebuild :

  Added ~ppc to keywords.

*tkman-2.1.ebuild (2 August 2002)

  2 Aug 2002; phoen][x <phoenix@gentoo.org> tkman-2.1.ebuild :
  Added LICENSE, KEYWORDS, SLOT.

  16 Jul 2002; Ben Lutgens <lamer@gentoo.org> ChangeLog  :

  New ChangeLog