@@ -1,7 +1,7 @@
-MD5 41c97704798dc1c58122c41c0a985250 ChangeLog 939
+MD5 56ac7454c382f740960b74bcb2828b78 tkman-2.1-r1.ebuild 894
 MD5 87529309bdb5fd1f20e79c457e647329 tkman-2.1.ebuild 686
-MD5 adcedbebfd20a18ef821745fc7d099ab tkman-2.1-r1.ebuild 687
+MD5 3ab55a4d8d93a1c8535f4cbd26561977 ChangeLog 1066
 MD5 6dc154cf725411019c116b98964cf4b1 files/digest-tkman-2.1 57
+MD5 f3de4484b7c0f0ab66c744133fd44897 files/tkman-2.1-r1-gentoo.diff 2497
 MD5 719b88e835a3a6a36336e60822f5bd8e files/tkman-2.1-gentoo.diff 2500
 MD5 6dc154cf725411019c116b98964cf4b1 files/digest-tkman-2.1-r1 57
-MD5 f3de4484b7c0f0ab66c744133fd44897 files/tkman-2.1-r1-gentoo.diff 2497
