@@ -1,6 +1,9 @@
 # ChangeLog for app-text/tkman
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/tkman/ChangeLog,v 1.9 2003/07/17 00:14:40 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/tkman/ChangeLog,v 1.10 2003/11/01 08:00:15 brandy Exp $
+
+  01 Nov 2003; Brandy Westcott brandy@gentoo.org tkman-2.1-r1.ebuild:
+  Fix incompatibility between groff-1.18.x and tkman.
 
   17 Jul 2003; Lars Weiler <pylon@gentoo.org> tkman-2.1-r1.ebuild:
   Set ppc into KEYWORDS
